--- a/MyerSplash/View/Uc/NetworkDiagnosisDialog.xaml
+++ b/MyerSplash/View/Uc/NetworkDiagnosisDialog.xaml
@@ -6,65 +6,66 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Height="500"
     Width="{StaticResource DialogWidth}"
+    Height="500"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    mc:Ignorable="d">
 
-    <Grid Background="{StaticResource MyerSplashDarkColorBrush}"
-          CornerRadius="2">
+    <Grid Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}" CornerRadius="2">
         <StackPanel Margin="8">
             <StackPanel Orientation="Horizontal">
                 <TextBlock
-                Margin="12,12,0,0"
-                HorizontalAlignment="Left"
-                FontSize="20"
-                FontWeight="Bold"
-                Foreground="{StaticResource MyerSplashThemeColorBrush}"
-                Text="NETWORK DIAGNOSIS" />
-                <ProgressRing x:Name="ProgressRing" 
-                              Margin="12,12,0,0"
-                              Foreground="{StaticResource MyerSplashThemeColorBrush}"
-                              IsActive="True"/>
+                    Margin="12,12,0,0"
+                    HorizontalAlignment="Left"
+                    FontSize="20"
+                    FontWeight="Bold"
+                    Foreground="{StaticResource MyerSplashThemeColorBrush}"
+                    Text="NETWORK DIAGNOSIS" />
+                <ProgressRing
+                    x:Name="ProgressRing"
+                    Margin="12,12,0,0"
+                    Foreground="{StaticResource MyerSplashThemeColorBrush}"
+                    IsActive="True" />
             </StackPanel>
             <ScrollViewer Height="380" Margin="0,12">
                 <RichTextBlock
                     x:Name="InfoBlock"
                     Margin="12,12,0,0"
                     HorizontalAlignment="Left"
-                    FontSize="12"/>
+                    FontSize="12" />
             </ScrollViewer>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" 
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom"
-                    Margin="8">
+        <StackPanel
+            Margin="8"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Orientation="Horizontal">
             <Button
                 x:Name="ReportButton"
-                Click="ReportButton_Click"
-                Visibility="Collapsed"
+                cu:Style="{StaticResource MainButtonCompatStyle}"
                 fcu:Style="{StaticResource MainButtonStyle}"
-                cu:Style="{StaticResource MainButtonCompatStyle}">
+                Click="ReportButton_Click"
+                Visibility="Collapsed">
                 <Border>
                     <TextBlock
                         Margin="12"
                         FontWeight="Bold"
-                        Foreground="White"
+                        Foreground="{ThemeResource SystemBaseHighColor}"
                         Text="REPORT BY EMAIL" />
                 </Border>
             </Button>
             <Button
                 x:Name="CloseButton"
-                Click="CloseButton_Click"
+                cu:Style="{StaticResource MainButtonCompatStyle}"
                 fcu:Style="{StaticResource MainButtonStyle}"
-                cu:Style="{StaticResource MainButtonCompatStyle}">
+                Click="CloseButton_Click">
                 <Border>
                     <TextBlock
-                    Margin="12"
-                    FontWeight="Bold"
-                    Foreground="White"
-                    Text="CLOSE" />
+                        Margin="12"
+                        FontWeight="Bold"
+                        Foreground="{ThemeResource SystemBaseHighColor}"
+                        Text="CLOSE" />
                 </Border>
             </Button>
         </StackPanel>
