--- a/MyerSplash/App.xaml
+++ b/MyerSplash/App.xaml
@@ -4,8 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="using:MyerSplash.Common"
     xmlns:local="using:MyerSplash"
-    xmlns:vm="using:MyerSplash.ViewModel"
-    RequestedTheme="Dark">
+    xmlns:vm="using:MyerSplash.ViewModel">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
