--- a/MyerSplash/View/Uc/DownloadItemTemplate.xaml
+++ b/MyerSplash/View/Uc/DownloadItemTemplate.xaml
@@ -9,9 +9,10 @@
     d:DesignWidth="400"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <Style x:Key="SetAsButtonStyle"
-               BasedOn="{StaticResource ButtonCommonStyle}"
-               TargetType="Button">
+        <Style
+            x:Key="SetAsButtonStyle"
+            BasedOn="{StaticResource ButtonCommonStyle}"
+            TargetType="Button">
             <Setter Property="Height" Value="{StaticResource SetAsHeight}" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
@@ -23,9 +24,9 @@
             <Setter Property="Margin" Value="12,0,0,0" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontWeight" Value="Normal" />
-            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontSize" Value="15" />
         </Style>
-        <SolidColorBrush x:Key="SetAsButtonMaskColorBrush">#26000000</SolidColorBrush>
+        <SolidColorBrush x:Key="SetAsButtonMaskColorBrush">#00000000</SolidColorBrush>
     </UserControl.Resources>
     <Grid
         x:Name="RootGrid"
@@ -52,15 +53,15 @@
         <Button
             x:Name="ShareBtn"
             Grid.RowSpan="1"
-            Width="40"
             Grid.Column="1"
+            Width="40"
             Height="40"
             Margin="4"
             HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"      
-            PointerEntered="Img_PointerEntered"
+            VerticalAlignment="Bottom"
             Background="{x:Null}"
             Click="ShareBtn_Click"
+            PointerEntered="Img_PointerEntered"
             Style="{StaticResource ButtonCommonStyle}">
             <Grid>
                 <Ellipse Width="40" Height="40">
@@ -93,9 +94,10 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
-                        Text="Background" FontSize="{StaticResource SmallFontSize}"/>
+                        Text="Background" />
                 </Grid>
             </Button>
             <Button
@@ -107,9 +109,10 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
-                        Text="Lock screen" FontSize="{StaticResource SmallFontSize}" />
+                        Text="Lock screen" />
                 </Grid>
             </Button>
             <Button
@@ -121,9 +124,10 @@
                     <Border Background="{Binding ImageItem.MajorColor, FallbackValue=Black, Mode=OneWay}" />
                     <Border Background="{StaticResource SetAsButtonMaskColorBrush}" />
                     <TextBlock
+                        FontSize="{StaticResource SmallFontSize}"
                         Foreground="{Binding ImageItem.InfoForeColor, FallbackValue=White, Mode=OneWay}"
                         Style="{StaticResource SetAsTextBlockStyle}"
-                        Text="Both" FontSize="{StaticResource SmallFontSize}"/>
+                        Text="Both" />
                 </Grid>
             </Button>
         </StackPanel>
@@ -162,16 +166,16 @@
                                 x:Name="SetAsTB"
                                 Grid.ColumnSpan="2"
                                 Margin="12,0,0,0"
-                                FontWeight="Bold"
                                 FontSize="{StaticResource SmallFontSize}"
+                                FontWeight="Bold"
                                 Foreground="{Binding ImageItem.InfoForeColor, Mode=OneWay, FallbackValue=White}"
                                 Text="SET AS" />
                             <FontIcon
                                 x:Name="BackFI"
                                 Margin="12,0,0,0"
-                                FontSize="{StaticResource MediumFontSize}"
                                 HorizontalAlignment="Left"
                                 FontFamily="Segoe MDL2 Assets"
+                                FontSize="{StaticResource MediumFontSize}"
                                 Foreground="{Binding ImageItem.InfoForeColor, Mode=OneWay, FallbackValue=White}"
                                 Glyph="&#xE0A6;" />
                         </Grid>
@@ -247,9 +251,9 @@
                         Margin="12,0,0,0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
+                        FontSize="{StaticResource SmallFontSize}"
                         FontWeight="Bold"
                         Foreground="{Binding ImageItem.InfoForeColor, Mode=OneWay}"
-                        FontSize="{StaticResource SmallFontSize}"
                         Text="{Binding ProgressString, FallbackValue=30%, Mode=OneWay}" />
                     <Button
                         Width="{StaticResource DownloadProgressBarHeight}"
