--- a/MyerSplash/View/Uc/DownloadsListControl.xaml
+++ b/MyerSplash/View/Uc/DownloadsListControl.xaml
@@ -2,10 +2,10 @@
     x:Class="MyerSplash.View.Uc.ManageDownloadControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:attach="using:JP.Utils.Framework"
-    xmlns:common="using:MyerSplash.Common"
-    xmlns:cc="using:MyerSplashCustomControl"
     xmlns:adapter="using:MyerSplash.Adapter"
+    xmlns:attach="using:JP.Utils.Framework"
+    xmlns:cc="using:MyerSplashCustomControl"
+    xmlns:common="using:MyerSplash.Common"
     xmlns:control="using:MyerSplashCustomControl"
     xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,27 +20,24 @@
     <UserControl.Background>
         <StaticResource ResourceKey="MyerSplashThemeColorBrush" />
     </UserControl.Background>
-    <Grid
-        x:Name="RootGrid"
-        cu:Background="{StaticResource AppBackgroundBrushDark}"
-        fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
+    <Grid x:Name="RootGrid" Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid x:Name="DummyTitleBar" Background="Transparent"/>
+        <Grid x:Name="DummyTitleBar" Background="Transparent" />
         <Button
             x:Name="CloseBtn"
             Width="{StaticResource MainButtonSize}"
             Height="{StaticResource MainButtonSize}"
+            Margin="12,0,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Stretch"
-            Click="CloseBtn_Click"
-            fcu:Style="{StaticResource MainButtonStyle}"
             cu:Style="{StaticResource MainButtonCompatStyle}"
-            Margin="12,0,0,0">
-            <FontIcon Style="{StaticResource CloseIconStyle}"
-                      FontSize="{StaticResource SmallFontSize}" />
+            fcu:Style="{StaticResource MainButtonStyle}"
+            Background="Transparent"
+            Click="CloseBtn_Click">
+            <FontIcon FontSize="{StaticResource SmallFontSize}" Style="{StaticResource CloseIconStyle}" />
         </Button>
         <TextBlock
             Margin="12,0,0,0"
@@ -48,7 +45,7 @@
             VerticalAlignment="Center"
             FontSize="{StaticResource MediumFontSize}"
             FontWeight="Bold"
-            Foreground="White"
+            Foreground="{ThemeResource SystemBaseHighColor}"
             Text="DOWNLOADS" />
         <control:AdaptiveGridView
             x:Name="ImageGridView"
@@ -67,7 +64,7 @@
                 </DataTemplate>
             </control:AdaptiveGridView.ItemTemplate>
             <control:AdaptiveGridView.Adapter>
-                <adapter:DownloadItemAdatper/>
+                <adapter:DownloadItemAdatper />
             </control:AdaptiveGridView.Adapter>
             <control:AdaptiveGridView.ItemContainerStyle>
                 <Style TargetType="GridViewItem">
@@ -98,12 +95,13 @@
             Command="{x:Bind DownloadsVM.DeleteFABCommand, Mode=OneWay}"
             Style="{StaticResource FabStyle}">
             <Grid Width="60" Height="60">
-                <cc:EllipseShadowControl Style="{StaticResource MainFabStyle}" />
+                <control:EllipseShadowControl Style="{StaticResource MainFabStyle}" />
                 <Grid>
-                    <FontIcon FontFamily="Segoe MDL2 Assets" 
-                              Glyph="&#xE10C;"  
-                              Foreground="#FF333333"
-                              FontSize="{StaticResource MediumFontSize}"/>
+                    <FontIcon
+                        FontFamily="Segoe MDL2 Assets"
+                        FontSize="{StaticResource MediumFontSize}"
+                        Foreground="#FF333333"
+                        Glyph="&#xE10C;" />
                 </Grid>
             </Grid>
         </Button>
