--- a/MyerSplash/View/Uc/LoadingControl.xaml
+++ b/MyerSplash/View/Uc/LoadingControl.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="MyerSplash.View.Uc.LoadingControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="using:MyerSplash.View.Uc"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             d:DesignHeight="50"
-             d:DesignWidth="200"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="MyerSplash.View.Uc.LoadingControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:MyerSplash.View.Uc"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="50"
+    d:DesignWidth="200"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Storyboard x:Name="StartStory" RepeatBehavior="Forever">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetName="E2" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
@@ -57,36 +58,39 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </UserControl.Resources>
-    <Grid x:Name="RootGrid"
-          Width="200"
-          Height="50">
+    <Grid
+        x:Name="RootGrid"
+        Width="200"
+        Height="50">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Ellipse x:Name="E1"
-                 Grid.Column="1"
-                 Width="16"
-                 Height="16"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Fill="White"
-                 RenderTransformOrigin="0.5,0.5"
-                 Stretch="Fill">
+        <Ellipse
+            x:Name="E1"
+            Grid.Column="1"
+            Width="16"
+            Height="16"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Fill="{ThemeResource SystemBaseHighColor}"
+            RenderTransformOrigin="0.5,0.5"
+            Stretch="Fill">
             <Ellipse.RenderTransform>
                 <CompositeTransform ScaleX="1" ScaleY="1" />
             </Ellipse.RenderTransform>
         </Ellipse>
-        <Ellipse x:Name="E2"
-                 Grid.Column="1"
-                 Width="16"
-                 Height="16"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Fill="White"
-                 RenderTransformOrigin="0.5,0.5"
-                 Stretch="Fill">
+        <Ellipse
+            x:Name="E2"
+            Grid.Column="1"
+            Width="16"
+            Height="16"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Fill="{ThemeResource SystemBaseHighColor}"
+            RenderTransformOrigin="0.5,0.5"
+            Stretch="Fill">
             <Ellipse.RenderTransform>
                 <CompositeTransform ScaleX="1" ScaleY="1" />
             </Ellipse.RenderTransform>
