--- a/MyerSplash/View/Uc/LoadingTextControl.xaml
+++ b/MyerSplash/View/Uc/LoadingTextControl.xaml
@@ -15,7 +15,7 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="18"
-            Foreground="White"
+            Foreground="{ThemeResource SystemBaseHighColor}"
             Text="Loading..." />
     </StackPanel>
 </UserControl>
