--- a/MyerSplash/View/Uc/NoNetworkControl.xaml
+++ b/MyerSplash/View/Uc/NoNetworkControl.xaml
@@ -16,28 +16,29 @@
             VerticalAlignment="Center"
             FontSize="50"
             FontWeight="Light"
-            Foreground="{StaticResource HintTextForegroundBrush}"
+            Foreground="{ThemeResource SystemBaseHighColor}"
             Text="Oops :(" />
         <TextBlock
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             FontSize="20"
             FontWeight="Light"
-            Foreground="{StaticResource HintTextForegroundBrush}"
+            Foreground="{ThemeResource SystemBaseHighColor}"
+            Opacity="0.7"
             Text="Something happened" />
         <Button
+            x:Name="DiagnoseButton"
             Margin="0,12"
             HorizontalAlignment="Stretch"
-            x:Name="DiagnoseButton"
-            Click="DiagnoseButton_Click"
+            HorizontalContentAlignment="Center"
+            cu:Style="{StaticResource MainButtonCompatStyle}"
             fcu:Style="{StaticResource MainButtonStyle}"
             Background="{StaticResource SettingsButtonBackgroundBrush}"
-            HorizontalContentAlignment="Center"
-            cu:Style="{StaticResource MainButtonCompatStyle}">
+            Click="DiagnoseButton_Click">
             <TextBlock
-                  Foreground="White"
-                  Style="{StaticResource SettingItemButtonContentStyle}"
-                  Text="Diagnose Network" />
+                Foreground="White"
+                Style="{StaticResource SettingItemButtonContentStyle}"
+                Text="Diagnose Network" />
         </Button>
     </StackPanel>
 </UserControl>
