--- a/MyerSplash/View/Uc/SearchBarControl.xaml
+++ b/MyerSplash/View/Uc/SearchBarControl.xaml
@@ -15,8 +15,7 @@
             x:Name="MaskBorder"
             Grid.RowSpan="2"
             attach:UIElementTapCommand.ItemTapCommand="{x:Bind MainVM.HideSearchCommand, Mode=OneWay}"
-            cu:Background="{StaticResource AppBackgroundBrushDark}"
-            fcu:Background="{StaticResource CustomAcrylicInAppBrush}" />
+            Background="{ThemeResource SystemControlChromeLowAcrylicElementBrush}" />
         <Grid
             x:Name="ContentGrid"
             Margin="0,0,0,200"
