--- a/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
+++ b/MyerSplashCustomControl/ContentPopupEx/ContentPopupEx.xaml
@@ -10,8 +10,8 @@
                         <Grid.Resources>
                             <Storyboard x:Name="InStory">
                                 <DoubleAnimationUsingKeyFrames Storyboard.TargetName="MaskBorder" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <EasingDoubleKeyFrame KeyTime="0" Value="0" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.4" Value="0.8" />
+                                    <LinearDoubleKeyFrame KeyTime="0" Value="0" />
+                                    <LinearDoubleKeyFrame KeyTime="0:0:0.4" Value="0.8" />
                                 </DoubleAnimationUsingKeyFrames>
                                 <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MaskBorder" Storyboard.TargetProperty="(UIElement.Visibility)">
                                     <DiscreteObjectKeyFrame KeyTime="0">
@@ -26,8 +26,8 @@
                                     </DiscreteObjectKeyFrame>
                                 </ObjectAnimationUsingKeyFrames>
                                 <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.Opacity)">
-                                    <EasingDoubleKeyFrame KeyTime="0" Value="0.075" />
-                                    <EasingDoubleKeyFrame KeyTime="0:0:0.2" Value="1" />
+                                    <LinearDoubleKeyFrame KeyTime="0" Value="0.075" />
+                                    <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1" />
                                 </DoubleAnimationUsingKeyFrames>
                                 <DoubleAnimationUsingKeyFrames Storyboard.TargetName="ContentGrid" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)">
                                     <EasingDoubleKeyFrame KeyTime="0" Value="1.2" />
@@ -92,7 +92,7 @@
                         </Grid.Resources>
                         <Border
                             x:Name="MaskBorder"
-                            Background="Black"
+                            Background="{ThemeResource SystemAltMediumColor}"
                             Opacity="0"
                             Visibility="Collapsed" />
                         <Grid
