--- a/MyerSplashCustomControl/TopNavigationControl/TopNavigationControl.xaml
+++ b/MyerSplashCustomControl/TopNavigationControl/TopNavigationControl.xaml
@@ -2,21 +2,23 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MyerSplashCustomControl">
-    <Style TargetType="local:TopNavigationControl" >
+    <Style TargetType="local:TopNavigationControl">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:TopNavigationControl">
                     <StackPanel Orientation="Vertical">
-                        <StackPanel x:Name="RootPanel" Orientation="Horizontal"/>
+                        <StackPanel.Resources>
+                            <local:ColorToBrushConverter x:Key="Converter" />
+                        </StackPanel.Resources>
+                        <StackPanel x:Name="RootPanel" Orientation="Horizontal" />
                         <Canvas>
                             <Border
                                 x:Name="NavigationBorder"
-                                Height="4"
-                                VerticalAlignment="Top"
                                 Width="25"
+                                Height="4"
                                 HorizontalAlignment="Left"
-                                Background="{TemplateBinding SliderBrush}">
-                            </Border>
+                                VerticalAlignment="Top"
+                                Background="{Binding Path=SliderBrush, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay, Converter={StaticResource Converter}}" />
                         </Canvas>
                     </StackPanel>
                 </ControlTemplate>
